@@ -11,6 +11,8 @@ Fixed: Issue #1129: When Monit log was set to a device, such as "set logfile /de
 New: The "check program" output in the "monit status" CLI was limited to 200 characters. The limitation is removed
      and monit will display up to "set limits { programOutput: <size> }" characters now.
 
+Changed: The "check program" output change test now sets the level to warning (yellow), instead of error (red).
+
 
 Version 5.35.2
 
